{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 13,
  "lineage": "a3f05499-83ad-c48b-4e05-792137ed5de1",
  "resources": [
    {
      "module": "module.firewall_rule_icmp_public",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-02-21T08:10:52.105-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vm-test-341412/global/firewalls/access-public-vm",
            "log_config": [],
            "name": "access-public-vm",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "priority": 1000,
            "project": "vm-test-341412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/firewalls/access-public-vm",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rule_private_vm",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-02-21T08:10:52.255-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vm-test-341412/global/firewalls/private-vm",
            "log_config": [],
            "name": "private-vm",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "priority": 1000,
            "project": "vm-test-341412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/firewalls/private-vm",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "public-vm"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "private-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rule_public_ssh_all",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-02-21T08:10:52.316-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vm-test-341412/global/firewalls/ssh-all-public-instances",
            "log_config": [],
            "name": "ssh-all-public-instances",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "priority": 1000,
            "project": "vm-test-341412",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/firewalls/ssh-all-public-instances",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "public-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/vm-test-341412/global/networks/network",
            "mtu": 0,
            "name": "network",
            "project": "vm-test-341412",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network"
          }
        }
      ]
    },
    {
      "module": "module.private_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "virtual-machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200317",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/us-west2-a/disks/private-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/vm-test-341412/zones/us-west2-a/instances/private-vm",
            "instance_id": "8587819259348780873",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "Name": "private_vm"
            },
            "metadata_fingerprint": "QOsRn_vQB94=",
            "name": "private-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.102.118.197",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
                "network_ip": "10.0.8.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/us-west2/subnetworks/private-subnetwork",
                "subnetwork_project": "vm-test-341412"
              }
            ],
            "project": "vm-test-341412",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/us-west2-a/instances/private-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "private-vm",
              "test"
            ],
            "tags_fingerprint": "AJX7LcRjsUo=",
            "zone": "us-west2-a"
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.private_subnet.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-21T08:10:54.888-08:00",
            "gateway_address": "10.0.8.1",
            "id": "projects/vm-test-341412/regions/us-west2/subnetworks/private-subnetwork",
            "ip_cidr_range": "10.0.8.0/21",
            "name": "private-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "vm-test-341412",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/us-west2/subnetworks/private-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.public_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "virtual-machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200317",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/us-west2-a/disks/public-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/vm-test-341412/zones/us-west2-a/instances/public-vm",
            "instance_id": "8980879822871725896",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "Name": "public_vm"
            },
            "metadata_fingerprint": "vYZ97Wpvj0Y=",
            "name": "public-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.102.95.9",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/us-west2/subnetworks/public-subnetwork",
                "subnetwork_project": "vm-test-341412"
              }
            ],
            "project": "vm-test-341412",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/zones/us-west2-a/instances/public-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "public-vm",
              "test"
            ],
            "tags_fingerprint": "FZKI3o2mleU=",
            "zone": "us-west2-a"
          },
          "dependencies": [
            "module.network.google_compute_network.network",
            "module.public_subnet.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-02-21T08:10:55.614-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/vm-test-341412/regions/us-west2/subnetworks/public-subnetwork",
            "ip_cidr_range": "10.0.0.0/21",
            "name": "public-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/global/networks/network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "vm-test-341412",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vm-test-341412/regions/us-west2/subnetworks/public-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}